@@ -14,6 +14,7 @@ Correa, Thiago (Correa)
 Desroches, Devon (Viper)
 Kerr, Charles (Punt)
 Hartte, Sebastian (DarkStorm) :: sebastian@hartte.de
+Machado, Vinicius (Magnus) :: vsmachado@gmail.com
 Meisl, Klaus (Naddel) :: naddel@ancient-realms.org
 Meshkov, Anton (Codex)
 Meyer, Richard (Dreoth) :: dreoth@users.sourceforge.net
