@@ -444,7 +444,8 @@ EVENT_LOG = 57
 EVENT_REGENHITS = 58
 EVENT_REGENMANA = 59
 EVENT_REGENSTAMINA = 60
-EVENT_COUNT = 61
+EVENT_BECOMECRIMINAL = 61
+EVENT_COUNT = 62
 """
 	\end
 """
