@@ -135,6 +135,7 @@ public:
 	virtual bool onHelp(); // The character wants help
 	virtual bool onChat(); // The character wants to chat
 	virtual bool onCastSpell( unsigned int spell );
+	virtual bool onBecomeCriminal( unsigned int reason, P_CHAR sourcechar, P_ITEM sourceitem ); // The Character will becomes criminal
 	void poll( unsigned int time, unsigned int events );
 	bool onUse( P_ITEM pItem );
 	bool onPickup( P_ITEM pItem );
