@@ -101,6 +101,7 @@ enum ePythonEvent
 	EVENT_REGENHITS,
 	EVENT_REGENMANA,
 	EVENT_REGENSTAMINA,
+	EVENT_BECOMECRIMINAL,
 	EVENT_COUNT,
 };
 
